# bankai

./: README.md  __init__.py  models.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
Result/sample/6GOD/: GOD_maximum_report_v4.md  GOD_third_impact_v3_report.txt  README.md
Result/sample/Amyloid-beta_oligomers_2ns/: maximum_report_v4.md  third_impact_v3_report.txt
Result/sample/Chignolin/: maximum_report_v4.md  third_impact_v3_report.txt
Result/sample/tdp43_rrm/: README.md  analysis_data_v4.json  analysis_report_v4.md  lambda_result_summary.json  maximum_report_v4.md  tdp43_metadata.json  tdp43_residue_atom_mapping.json  third_impact_v3_report.txt
Result/sample/tdp43_rrm/Analytics/: protein_indices.npy  protein_only.gro  tdp43_metadata.json  tdp43_residue_atom_mapping.json
analysis/: two_stage_analyzer_gpu.py
bankai/: __init__.py  __main__.py  cli.py  models.py
bankai/analysis/: __init__.py  evaluation_gpu.py  maximum_report_generator.py  md_lambda3_detector_gpu.py  network_analyzer_core.py  run_full_analysis.py  third_impact_analytics.py  topology_resolver.py  two_stage_analyzer_gpu.py
bankai/benchmark/: __init__.py  performance_tests.py
bankai/core/: __init__.py  gpu_kernels.py  gpu_memory.py  gpu_patches.py  gpu_utils.py
bankai/data/: README.md  __init__.py
bankai/data/chignolin/: metadata_stable.json  protein.npy  residue_atom_mapping.json
bankai/detection/: README.md  __init__.py  anomaly_detection_gpu.py  boundary_detection_gpu.py  extended_detection_gpu.py  phase_space_gpu.py  topology_breaks_gpu.py
bankai/geometric/: README.md  __init__.py  geometric_validation_gpu.py
bankai/quantum/: README.md  __init__.py  quantum_validation_gpu.py
bankai/residue/: __init__.py  causality_analysis_gpu.py  confidence_analysis_gpu.py  residue_network_gpu.py  residue_structures_gpu.py
bankai/structures/: __init__.py  lambda_structures_core.py  lambda_structures_gpu.py  md_features_gpu.py  tensor_operations_gpu.py
bankai/tools/: README.md  __init__.py  convert_trajectory.py
bankai/visualization/: __init__.py  causality_viz_gpu.py  plot_results_gpu.py
data/: README.md
detection/: boundary_detection_gpu.py  extended_detection_gpu.py  phase_space_gpu.py
flc/: fitting.py
residue/: confidence_analysis_gpu.py  residue_structures_gpu.py
structures/: lambda_structures_gpu.py  tensor_operations_gpu.py
test/: test_gpu_env.py  test_import.py  test_pipeline.py
tests/: conftest.py  test_cli.py  test_data.py
visualization/: causality_viz_gpu.py  plot_results_gpu.py
