[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bankai"
version = "1.1.0"
description = "BANKAI: Bond-vector ANalysis of Kinetic Amino acid Initiator - GPU-accelerated sub-picosecond causal cascade detection in GROMACS trajectories"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Masamichi Iizumi", email = "m.iizumi@miosync.email"},
]
maintainers = [
    {name = "Masamichi Iizumi", email = "m.iizumi@miosync.email"},
]
keywords = [
    "molecular-dynamics",
    "gpu",
    "cuda",
    "gromacs",
    "trajectory-analysis",
    "protein-dynamics",
    "causal-cascade",
    "sub-picosecond",
    "vector-field",
    "genesis-atom",
    "structural-analysis",
    "bankai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

# コア依存関係（CUDAなし - GPUバックエンドは extras で選択）
dependencies = [
    "numpy>=1.22.0,<2.0.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    "psutil>=5.9.0",
    "GPUtil>=1.4.0",
    "networkx>=2.8.0",
    "joblib>=1.2.0",
    "numba>=0.57.0",
    "xarray>=2023.1.0",
    "h5py>=3.7.0",
]

[project.optional-dependencies]
# GPU backends - ユーザーが自分のCUDA環境に合わせて選択
cuda11 = [
    "cupy-cuda11x>=12.0.0",
]
cuda12 = [
    "cupy-cuda12x>=13.0.0",
]
cuda12-compat = [
    # CUDA 12.5+ 互換モード
    "cupy-cuda12x==13.2.0",
    "nvidia-cuda-nvjitlink-cu12",
]

# 可視化拡張
viz = [
    "jupyterlab>=3.0.0",
    "ipywidgets>=7.6.0",
    "notebook>=6.4.0",
]

# 開発用
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

# フルインストール（CUDA 12 + viz + dev）
full = [
    "bankai[cuda12,viz,dev]",
]

[project.urls]
Homepage = "https://github.com/miosync-masa/bankai"
Documentation = "https://github.com/miosync-masa/bankai/wiki"
Repository = "https://github.com/miosync-masa/bankai"
Issues = "https://github.com/miosync-masa/bankai/issues"
Changelog = "https://github.com/miosync-masa/bankai/blob/main/CHANGELOG.md"

[project.scripts]
bankai = "bankai.cli:main"

# === Build Configuration ===

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["bankai*"]
exclude = ["tests*", "docs*", "examples*", "benchmarks*"]

[tool.setuptools.package-data]
bankai = [
    "py.typed",
    "cuda_compatibility.json",
]

# === Tool Configuration ===

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (blackが処理)
    "B905",   # zip strict
    "SIM108", # ternary operator
    "W293",  # blank line contains whitespace (CUDA kernel strings)
    "W291",  # trailing whitespace (same reason)
    "N803",   # argument not lowercase (lambda_F, Q_lambda)
    "N805",   # first arg not self
    "N806",   # variable not lowercase (same)
    "B009",   # getattr with constant (report generator pattern)
    "E402",   # import not at top (intentional lazy imports)
    "E741",   # ambiguous variable name l
    "N802",   # _compute_lambda_F etc
    "B007",   # unused loop control variable (enumerate pattern)
    "SIM102", # nested if → 可読性の好み
]

[tool.ruff.lint.isort]
known-first-party = ["bankai"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # GPU kernelは型付け困難
ignore_missing_imports = true  # cupy等の外部ライブラリ

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "gpu: marks tests requiring GPU (deselect with '-m \"not gpu\"')",
    "slow: marks tests that take >30s (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring GROMACS data",
]
filterwarnings = [
    "ignore::DeprecationWarning:cupy.*",
    "ignore::UserWarning:numba.*",
]
